--- a/.github/workflows/generate-site.yml
+++ b/.github/workflows/generate-site.yml
@@ -2,6 +2,8 @@ name: Publish to GitHub Pages with Lunr Search Extension
 on:
   push:
     branches: [main]
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
