docs(core): JBang Catalog Document Generator site

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -11,6 +11,9 @@ content:
     - url: https://github.com/rodnansol/spring-configuration-property-documenter
       start_path: docs
       branches: master
+    - url: https://github.com/rodnansol/jbang-catalog-document-generator
+      start_path: docs
+      branches: master
 
 ui:
   bundle:
